Autologin after change password, refactoring error handling, fix depricated segue in storyboard

--- a/IPSX/Flows/Profile/Storyboard/Base.lproj/Profile.storyboard
+++ b/IPSX/Flows/Profile/Storyboard/Base.lproj/Profile.storyboard
@@ -339,10 +339,10 @@
             </objects>
             <point key="canvasLocation" x="6337" y="-154"/>
         </scene>
-        <!--Login-->
+        <!--EmailLoginScreenID-->
         <scene sceneID="rsL-1Y-KeO">
             <objects>
-                <viewControllerPlaceholder storyboardName="Login" id="AWN-li-dF4" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="Login" referencedIdentifier="EmailLoginScreenID" id="AWN-li-dF4" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H5M-v3-3iy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="7734" y="-155"/>
@@ -592,7 +592,7 @@
                         <outlet property="separatorView" destination="nkc-3h-JfJ" id="OCl-ou-Ryh"/>
                         <outlet property="topBarView" destination="Rcj-cG-sJQ" id="W6R-gw-VGH"/>
                         <outlet property="topConstraintOutlet" destination="2Sy-As-Hyb" id="dE5-BA-DPk"/>
-                        <segue destination="AWN-li-dF4" kind="modal" identifier="LoginSegueID" id="35n-rZ-m9D"/>
+                        <segue destination="AWN-li-dF4" kind="presentation" identifier="LoginSegueID" id="35n-rZ-m9D"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lz2-9E-Xiy" userLabel="First Responder" sceneMemberID="firstResponder"/>
