--- a/IPSX/Common/UI elements/View/ToastAlertView.xib
+++ b/IPSX/Common/UI elements/View/ToastAlertView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -12,6 +12,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ToastAlertView" customModule="IPSX" customModuleProvider="target">
             <connections>
                 <outlet property="alertTextLabel" destination="ecc-D2-5F8" id="d0j-v8-EQf"/>
+                <outlet property="dismissButton" destination="fse-GV-kn6" id="hZR-ez-Hga"/>
                 <outlet property="leftImageView" destination="bkD-w2-TT4" id="lj1-zF-9jo"/>
             </connections>
         </placeholder>
