--- a/IPSX/Flows/Login/Storyboard/Base.lproj/Login.storyboard
+++ b/IPSX/Flows/Login/Storyboard/Base.lproj/Login.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="PpC-zs-M2V">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="PpC-zs-M2V">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -285,7 +285,7 @@
                                     <color key="titleColor" red="0.16862745098039217" green="0.51372549019607838" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="HfD-NE-Khu" kind="show" id="g3h-gY-bY7"/>
+                                    <segue destination="HfD-NE-Khu" kind="show" identifier="ForgotPasswordSegueID" id="g3h-gY-bY7"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rF7-LN-NfW" customClass="RoundedButton" customModule="IPSX" customModuleProvider="target">
@@ -474,7 +474,7 @@
                                     <color key="titleColor" red="0.16862745098039217" green="0.51372549019607838" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="iJa-Yr-c0U" kind="unwind" identifier="showLoginSegueID" unwindAction="unwindToLoginOptionsWithSegue:" id="Czp-TC-IjR"/>
+                                    <action selector="haveAnAccountAction:" destination="HfD-NE-Khu" eventType="touchUpInside" id="sH7-M5-eT7"/>
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cRV-Xq-2Wd" userLabel="Separator">
@@ -564,6 +564,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="MMg-uc-NE6"/>
                     <connections>
+                        <outlet property="alreadyHaveAccount" destination="GjQ-VO-LVy" id="kpK-A1-oQt"/>
                         <outlet property="backgroundImageView" destination="QOC-Kv-ctQ" id="g6A-Gz-GsY"/>
                         <outlet property="bottomContinueConstraint" destination="iZC-ZE-KZx" id="Ek8-mB-I3i"/>
                         <outlet property="continueButton" destination="4Ac-vC-zkK" id="np9-RD-6G9"/>
@@ -572,6 +573,8 @@
                         <outlet property="separatorView" destination="cRV-Xq-2Wd" id="2Y7-LS-UOv"/>
                         <outlet property="topBarView" destination="A3O-NY-cF5" id="UGa-5o-8NZ"/>
                         <outlet property="topConstraintOutlet" destination="yGt-dd-W4Z" id="7lz-18-HfR"/>
+                        <segue destination="iJa-Yr-c0U" kind="unwind" identifier="UnwindToLoginOptionsID" unwindAction="unwindToLoginOptionsWithSegue:" id="Lay-z3-AHD"/>
+                        <segue destination="iJa-Yr-c0U" kind="unwind" identifier="UnwindToLandingID" unwindAction="unwindToMainWithSegue:" id="F0o-7r-r7X"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sRN-0L-50g" userLabel="First Responder" sceneMemberID="firstResponder"/>
